--- a/reversi/reversi/Page1.xaml
+++ b/reversi/reversi/Page1.xaml
@@ -1,4 +1,5 @@
 ﻿<Page x:Class="オセロ.Page1"
+      xmlns:system="clr-namespace:System;assembly=mscorlib"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +8,7 @@
       d:DesignHeight="300"
       d:DesignWidth="300"
       mc:Ignorable="d">
-
+    
     <Grid>
         <TextBlock Margin="10,10,0,0"
                    HorizontalAlignment="Left"
