--- a/reversi/reversi/Page1.xaml
+++ b/reversi/reversi/Page1.xaml
@@ -1,40 +1,37 @@
 ﻿<Page x:Class="オセロ.Page1"
-      xmlns:system="clr-namespace:System;assembly=mscorlib"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       Title="Page1"
-      d:DesignHeight="300"
-      d:DesignWidth="300"
-      mc:Ignorable="d">
-    
+      mc:Ignorable="d" Height="452.251" Width="621.977">
+
     <Grid>
-        <TextBlock Margin="10,10,0,0"
+        <!--<TextBlock Margin="10,10,0,0"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Top"
                    Text="Page1"
-                   TextWrapping="Wrap" />
-        <Button x:Name="btnNavigateWithUri"
+                   TextWrapping="Wrap" />-->
+        <!--<Button x:Name="btnNavigateWithUri"
                 Margin="10,30,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Click="btnNavigateWithUri_Click"
-                Content="Uriで遷移" />
+                Content="Uriで遷移" />-->
         <Button x:Name="btnNavigateWithObject"
                 Margin="10,54,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Click="btnNavigateWithObject_Click"
-                Content="インスタンスを生成して遷移" />
-        <TextBlock Margin="10,78,0,0"
+                Content="GameStart" />
+        <!--<TextBlock Margin="10,78,0,0"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Top"
-                   TextWrapping="Wrap">
-            <Run Text="リンク："/>
+                   TextWrapping="Wrap">-->
+            <!--<Run Text="リンク："/>
             <Hyperlink NavigateUri="Page2.xaml">
                 <Run Text="Page2へ遷移します"/>
             </Hyperlink>
-        </TextBlock>
+        </TextBlock>-->
     </Grid>
 </Page>
