--- a/reversi/reversi/Page1.xaml
+++ b/reversi/reversi/Page1.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="オセロ.Page1"
+﻿<Page x:Class="reversi.Page1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      Title="Page1"
-      mc:Ignorable="d" Height="452.251" Width="621.977">
+      Title="オセロ" Height="800" Width="900"
+      mc:Ignorable="d">
 
     <Grid>
         <!--<TextBlock Margin="10,10,0,0"
