--- a/reversi/reversi/Page2.xaml
+++ b/reversi/reversi/Page2.xaml
@@ -1,13 +1,13 @@
-﻿<Page x:Class="オセロ.Page2"
+﻿<Page x:Class="reversi.Page2"
       xmlns:system="clr-namespace:System;assembly=mscorlib"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:オセロ"
+      xmlns:local="clr-namespace:reversi"
       mc:Ignorable="d" 
       d:DesignHeight="1000" d:DesignWidth="1000"
-      Title="Page2">
+      Title="オセロ" Height="800" Width="900">
 
     <!--<Window>-->
     <!--<Window.Resources>
